gccida/g1/clean_symbol_name
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/clean_symbol_name/src/tree.c:5066:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[i] & 0x8C) == 0 && i != 46 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/clean_symbol_name/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/clean_symbol_name/src/obj/tree.o] Error 1
